--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,9 @@ dependencies:
     sdk: flutter
   
   http: ^1.1.0
+  geolocator: ^10.1.0
+  permission_handler: ^11.3.1
+  shared_preferences: ^2.2.2
   flutter_lints: ^5.0.0
   flutter_rating_bar: ^4.0.0
   image_picker: ^1.0.4
