--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   
   http: ^1.1.0
+  socket_io_client: ^2.0.3+1
   geolocator: ^10.1.0
   permission_handler: ^11.3.1
   shared_preferences: ^2.2.2
