--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,14 +2,16 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-<key>NSLocationWhenInUseUsageDescription</key>
-<string>Esta app necesita acceso a la ubicación para reportar incidencias</string>
-<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-<string>Esta app necesita acceso a la ubicación para reportar incidencias</string>
-<key>NSCameraUsageDescription</key>
-<string>Esta app necesita acceso a la cámara para tomar fotos de las incidencias</string>
-<key>NSPhotoLibraryUsageDescription</key>
-<string>Esta app necesita acceso a la galería para seleccionar fotos</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Esta aplicación necesita acceso al micrófono para grabar audio de evidencia</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Esta app necesita acceso a la ubicación para reportar incidencias</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Esta app necesita acceso a la ubicación para reportar incidencias</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Esta app necesita acceso a la cámara para tomar fotos de las incidencias</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Esta app necesita acceso a la galería para seleccionar fotos</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
