--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,15 +11,17 @@ dependencies:
   flutter:
     sdk: flutter
   
-  http: ^1.1.0
-  socket_io_client: ^2.0.3+1
-  geolocator: ^10.1.0
-  permission_handler: ^11.3.1
-  shared_preferences: ^2.2.2
+  cupertino_icons: ^1.0.8
   flutter_lints: ^5.0.0
   flutter_rating_bar: ^4.0.0
+  flutter_sound: ^9.2.13
+  geolocator: ^10.1.0
+  http: ^1.1.0
   image_picker: ^1.0.4
-  cupertino_icons: ^1.0.8
+  path_provider: ^2.1.1
+  permission_handler: ^11.3.1
+  shared_preferences: ^2.2.2
+  socket_io_client: ^2.0.3+1
 
 dev_dependencies:
   flutter_test:
