--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,13 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/imgs/logo.png"
 
 flutter:
   uses-material-design: true
