--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_rating_bar: ^4.0.0
   record: ^4.4.4                  
   just_audio: ^0.9.34
+  audio_session: ^0.1.16
   geolocator: ^10.1.0
   http: ^1.1.0
   image: ^4.1.7
