--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,9 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_lints: ^5.0.0
   flutter_rating_bar: ^4.0.0
-  record: ^4.4.4                  
-  just_audio: ^0.9.34
-  audio_session: ^0.1.16
+  flutter_sound_lite: ^8.3.9
   geolocator: ^10.1.0
   http: ^1.1.0
   image: ^4.1.7
