--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_lints: ^5.0.0
   flutter_rating_bar: ^4.0.0
-  flutter_sound_lite: ^8.3.9
+  record: ^5.0.4
+  just_audio: ^0.9.36
   geolocator: ^10.1.0
   http: ^1.1.0
   image: ^4.1.7
