--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,13 +7,16 @@ version: 1.0.0+2
 environment:
   sdk: ^3.6.0
 
+platforms:
+  android:
+  ios:
+
 dependencies:
   flutter:
     sdk: flutter
 
   cached_network_image: ^3.3.1
   cupertino_icons: ^1.0.8
-  flutter_lints: ^5.0.0
   flutter_rating_bar: ^4.0.0
   record: ^5.0.4
   audioplayers: ^5.2.1
@@ -30,6 +33,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   
+  flutter_lints: ^5.0.0
   flutter_launcher_icons: ^0.13.1
 
 flutter_launcher_icons:
