--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,13 @@ dependencies:
   shared_preferences: ^2.2.2
   socket_io_client: ^2.0.3+1
 
+dependency_overrides:
+  record_linux:
+    git:
+      url: https://github.com/llfbandit/record.git
+      path: record_linux
+      ref: main
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
