--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,8 @@ dependencies:
   cached_network_image: ^3.3.1
   cupertino_icons: ^1.0.8
   flutter_rating_bar: ^4.0.0
-  flutter_sound: ^9.28.0
+  record: ^5.1.0
+  assets_audio_player: ^3.1.1
   geolocator: ^10.1.0
   http: ^1.1.0
   image: ^4.1.7
@@ -27,13 +28,6 @@ dependencies:
   permission_handler: ^11.3.1
   shared_preferences: ^2.2.2
   socket_io_client: ^2.0.3+1
-
-dependency_overrides:
-  record_linux:
-    git:
-      url: https://github.com/llfbandit/record.git
-      path: record_linux
-      ref: master
 
 dev_dependencies:
   flutter_test:
