--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,15 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>AVAudioSessionCategoryRecord</key>
-	<string>YES</string>
-	<key>AVAudioSessionCategoryPlayback</key>
-	<string>YES</string>
-	<key>AVAudioSessionCategoryPlayAndRecord</key>
-	<string>YES</string>
 	<key>UIBackgroundModes</key>
 	<array>
-		<key>audio</key>
+		<string>audio</string>
 	</array>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Esta aplicación necesita acceso al micrófono para grabar audio de evidencia</string>
